InternexDev_Sandbox/src/objects/WF_RMH__c.object
<CustomObject>
    <fields>
        <fullName>Envelope_Number__c</fullName>
        <label>Envelope Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PR_Envelope_No__c</fullName>
        <formula>TEXT(WF_PR__r.Reference_1_PR22B__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PR Envelope No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_ID__c</fullName>
        <defaultValue>&quot;RMH&quot;</defaultValue>
        <label>Record ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remittance_sequence_number__c</fullName>
        <label>Remittance sequence number(RMH01)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WF_PR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WF_PR</label>
        <referenceTo>WF_PR__c</referenceTo>
        <relationshipLabel>WF_RMH</relationshipLabel>
        <relationshipName>WF_RMH</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>WF_RMH</label>
    <nameField>
        <displayFormat>RMH-{00000}</displayFormat>
        <label>WF_RMH Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WF_RMH</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>